# docling-pdf-to-md-converter

./: .env.example  .eslintrc.cjs  .gitignore  .importlinter  CLAUDE.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements-langchain-extractor.txt  requirements-local-extractor.txt  vite.config.js
.gemini/scratch/: inspect_cache.py
apps/api/: deps.py  export_openapi.py  main.py  schemas.py  settings.py
apps/api/jobs/: extraction.py  plan_build.py
apps/api/routers/: documents.py  plans.py  sessions.py
apps/web/: package-lock.json  package.json  tsconfig.json  vite.config.js
apps/web/src/: App.jsx
apps/web/src/api/: client.ts  schema.d.ts
apps/web/src/components/: ChunksViewer.jsx  DocumentBlocksViewer.jsx  ObjectiveEditor.jsx  PlanUnitList.jsx  ProvenanceBadge.jsx  SourcePanel.jsx
apps/web/src/pages/: DocumentsPage.jsx  ExtractorDebugPage.jsx  PlanReviewPage.jsx
apps/web/src/utils/: imagePipeline.js  localExtractorApi.js  textSelection.js  visualDescriptionApi.js
db/migrations/: env.py
db/migrations/versions/: 432a7545f047_initial_schema.py  5a533576cf46_documents_content_hash_storage_uri_error.py  cf762c763b6f_plan_review_reviewed_flag_and_plan_.py
docs/: ARCHITECTURE_REVIEW_AND_ROADMAP.md  BACKLOG.md  DECISIONS.md
scripts/: build_plan_demo.py  demo_structured_call.py  probeOpenCodeVision.mjs  probe_gateway.py  run_assessment_fixture_suite.py
server/: groqVisionService.js  langchainExtractorService.py  localExtractorService.py  opencodeVisionClient.mjs  server.js
src/: App.jsx  styles.css
src/components/: ConversionOptions.jsx  FileUploader.jsx  ImageDebugPanel.jsx  MarkdownViewer.jsx  RawJsonViewer.jsx  StatsPanel.jsx
src/utils/: doclingApi.js  imagePipeline.js  langchainExtractorApi.js  localExtractorApi.js  markdownPostProcess.js  pptApi.js  responseParser.js  visionApi.js  visualDescriptionApi.js
tests/architecture/: test_imports.py
tests/contract/: conftest.py  test_assess_response_safe_default.py  test_client.py  test_structured.py
tests/contract/fixtures/: chat_completion_ok.json  http_error_400.json  http_error_500.json  json_object_malformed.json  json_object_repaired.json  json_object_valid.json
tests/fixtures/: assessments.jsonl  generate_assessments.py  generate_decks.py  generate_expected_blocks.py  generate_planbuilder_deck.py
tests/fixtures/decks/image_heavy/: expected_blocks.json
tests/fixtures/decks/mixed/: expected_blocks.json
tests/integration/: conftest.py  test_documents_api.py  test_plan_approval.py  test_schema.py  test_turn_contract.py
tests/unit/: test_anchoring.py  test_consistency.py  test_extraction_regression.py  test_objectives_recall_filter.py  test_segment_partition.py  test_select_action_stub.py
(+3 files in other folders)
