[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slidevision"
version = "0.1.0"
description = "SlideVision Adaptive Tutor"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
extraction = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pymupdf>=1.27",
    "pymupdf4llm>=1.27",
    "onnxruntime>=1.17",
    "rapidocr>=3.9",
    "pydantic>=2.0",
    "numpy>=1.26",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "slidevision[extraction,persistence,planbuilder,graph]",
]
persistence = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "python-dotenv>=1.0",
]
llm = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]
planbuilder = [
    "pydantic>=2.0",
    "rapidfuzz>=3.9",
    "slidevision[llm,persistence]",
]
graph = [
    "langgraph>=0.2",
    "pydantic>=2.0",
    "slidevision[persistence]",
]
dev = [
    "pytest>=8.0",
    "import-linter>=2.0",
    "httpx>=0.27",
    "respx>=0.21",
]

[tool.setuptools]
package-dir = { "slidevision" = "packages" }
packages = [
    "slidevision",
    "slidevision.extraction",
    "slidevision.tutor_core",
    "slidevision.graph",
    "slidevision.llm",
    "slidevision.llm.prompts",
    "slidevision.planbuilder",
    "slidevision.persistence",
    "slidevision.persistence.repositories",
    "apps",
    "apps.api",
    "apps.api.routers",
    "apps.api.jobs",
]

[tool.setuptools.package-data]
"slidevision.extraction" = ["opencode_helper/*.mjs"]
"slidevision.llm" = ["prompts/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
